@@ -3,8 +3,7 @@
 #  Author: Filippo Giunchedi <filippo@truelite.it>
 #
 #  This program is free software; you can redistribute it and/or modify
-#  it under the terms of the GNU General Public License Version 2
-#  as published by the Free Software Foundation
+#  it under the terms of the BSD 2-Clause License as shipped with pysnmp.
 #
 #  Description: twisted DatagramProtocol UDP transport
 #
