@@ -3,10 +3,9 @@
 #  Author: Filippo Giunchedi <filippo@truelite.it>
 #
 #  This program is free software; you can redistribute it and/or modify
-#  it under the terms of the GNU General Public License Version 2
-#  as published by the Free Software Foundation
+#  it under the terms of the BSD 2-Clause License as shipped with pysnmp.
 #
-# Description: Transport dispatcher based on twisted.internet.reactor
+#  Description: Transport dispatcher based on twisted.internet.reactor
 #
 import sys, time, traceback
 from twisted.internet import reactor, task
